Fixes few colour contrasts, removes one page title, and updates answers page

--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -13,17 +13,24 @@ $govuk-canvas-background-colour: $govuk-body-background-colour;
 // See localhost:3000/docs/examples/blank-unbranded
 
 .app-banner--warning {
-  background: red;
+  background: #ff9e44;
   padding: 24px;
   p {
-    color: white;
+    color: black;
   }
 }
 
 .goose-liked-hint {
-  color: #e8e8e8;
+  color: #9d9da1;
 }
 
 .justified-text {
   text-align: justify;
+}
+
+.link:focus {
+  outline: unset;
+  background-color: unset;
+  box-shadow: unset;
+  text-decoration: unset;
 }
